--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=512w&id=3656&format=png" type="image/x-icon">
 </head>
 <body>
     <div class="bg-gradient"></div>
@@ -85,4 +86,5 @@
 
     <script type="module" src="script.js"></script>
 </body>
+
 </html>
